--- a/server.cfg
+++ b/server.cfg
@@ -28,6 +28,6 @@ __sxei_16bpp 1
 __sxei_antispeed 1
 __sxei_antiwall 1
 
-sv_downloadurl "https://fastdl.injectshell.com/cstrike/"
+sv_downloadurl "https://injectshell.com/cstrike/"
 sv_allowdownload 1 
 sv_allowupload 1
